# mips-assembler

./: Instructions.hs  Main.hs  Parser.hs  README.md  mips-assembler.cabal  shit.hs
src/: CLI.hs  Instructions.hs  Main.hs  Parser.hs  Scanner.hs  Tokens.hs  basic.asm  output.txt  test.asm
test_progs/: test.asm
tests/: hello.asm
