cabal-version:      3.0

name:               mips-assembler

version:            0.1.0.0

synopsis:           MIPS assembler implemented in Haskell

-- A longer description of the package.
-- description:

-- The license under which the package is released.
-- license:            BSD-3-Clause

-- license-file:       LICENSE

author:             Alexander Wyatt

maintainer:         alexander@jdwyatt.com

category:           Development
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-- extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable mips-assembler
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Instructions
                   Scanner
                   Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1,
                      parsec,
                      optparse-applicative

    -- Directories containing source files.
    hs-source-dirs:   src/ 
   -- exposed-modules:  Instructions, Tokens, Parser

    -- Base language which the package is written in.
    default-language: GHC2021
